test/cases/x86_64-linux/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=x86_64-linux
//
// :109:9: error: root struct of file 'tmp' has no member named 'main'
